lab7 make it 5 Employees

--- a/lab7/index.html
+++ b/lab7/index.html
@@ -39,6 +39,26 @@
                 <label id="email3"></label>
             </td>
         </tr>
+        <tr>
+            <td>
+                <img src="#" id="image4" />
+            </td>
+            <td>
+                <label id="name4"></label><br/>
+                <label id="phone4"></label><br/>
+                <label id="email4"></label>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="#" id="image5" />
+            </td>
+            <td>
+                <label id="name5"></label><br/>
+                <label id="phone5"></label><br/>
+                <label id="email5"></label>
+            </td>
+        </tr>
 
     </table>
 
